2012-03-12  Sam Weinig  <sam@webkit.org>

        Fix typo in PageClientImpl where we were overriding viewLayerHostingMode with
        a function called layerHostingMode.

        Reviewed by Anders Carlsson.

        * UIProcess/API/mac/PageClientImpl.h:
        * UIProcess/API/mac/PageClientImpl.mm:
        (WebKit::PageClientImpl::viewLayerHostingMode):
        Update name and add OVERRIDE to catch this in the future.

2012-03-12  Enrica Casucci  <enrica@apple.com>

        WebKit2: remove NSPasteboard access for promised data from the WebProcess
        https://bugs.webkit.org/show_bug.cgi?id=80073

        Reviewed by Alexey Proskuryakov.

        This patch removes the last remaining access to NSPasteboard from the WebProcess.
        The code in WebDragClient::declareAndWriteDragImage now packages all the data
        required for the drag and the promised drag types and sends one request to the UI
        process that will place the data in the NSPasteboard when appropriate.
        
        * UIProcess/API/mac/PageClientImpl.h: Added setPromisedData method.
        * UIProcess/API/mac/PageClientImpl.mm:
        (WebKit::PageClientImpl::setPromisedData):
        * UIProcess/API/mac/WKView.mm:
        (matchesExtensionOrEquivalent): Added.
        (fileExists): Added.
        (pathWithUniqueFilenameForPath): Added.
        (-[WKView _setPromisedData:WebCore::withFileName:withExtension:withTitle:withURL:withVisibleURL:withArchive:WebCore::forPasteboard:]):
        (-[WKView pasteboardChangedOwner:]):
        (-[WKView pasteboard:provideDataForType:]):
        (-[WKView namesOfPromisedFilesDroppedAtDestination:]):
        * UIProcess/API/mac/WKViewInternal.h: Added _setPromisedData.
        * UIProcess/PageClient.h:
        * UIProcess/WebPageProxy.h: Added method for the new message.
        * UIProcess/WebPageProxy.messages.in: Added setPromisedData message.
        * UIProcess/mac/WebPageProxyMac.mm:
        (WebKit::WebPageProxy::setPromisedData):